fix: 修复z-index属性问题

--- a/src/components/header/index.module.less
+++ b/src/components/header/index.module.less
@@ -8,7 +8,7 @@
   right: 0;
   height: 74px;
   background-color: transparent;
-  z-index: 2;
+  z-index: 3;
   transition: all .3s;
 
   &.header_content_show {
